Изменены гиперпараметры у моделей для ускорения работы

--- a/customer_outflow.ipynb
+++ b/customer_outflow.ipynb
@@ -4683,9 +4683,9 @@
     "best_depth = 0\n",
     "best_split = 0\n",
     "best_leaf = 0\n",
-    "for leaf in range(1,11):\n",
-    "    for sample in range(2,11):\n",
-    "        for depth in range (1, 11):\n",
+    "for leaf in range(2, 12, 2):\n",
+    "    for sample in range(2, 12, 2):\n",
+    "        for depth in range (2, 12, 2):\n",
     "            model_tree = DecisionTreeClassifier(random_state=12345, max_depth=depth, min_samples_split=sample, min_samples_leaf=leaf)\n",
     "            model_tree.fit(features_train_downsampled_v2, target_train_downsampled_v2) \n",
     "            predictions_valid = model_tree.predict(features_valid_v2)\n",
@@ -4723,9 +4723,9 @@
     "best_est = 0\n",
     "best_depth = 0\n",
     "best_split = 0\n",
-    "for sample in range(2,11):\n",
-    "    for est in range(1, 50):\n",
-    "        for depth in range (1, 11):\n",
+    "for sample in range(2,6):\n",
+    "    for est in range(1, 50, 10):\n",
+    "        for depth in range (2, 12, 2):\n",
     "            model_forest = RandomForestClassifier(random_state=12345, n_estimators=est, max_depth=depth, min_samples_split=sample)\n",
     "            model_forest.fit(features_train_downsampled_v2, target_train_downsampled_v2) \n",
     "            predictions_valid = model_forest.predict(features_valid_v2)\n",
@@ -4796,9 +4796,9 @@
     "best_depth = 0\n",
     "best_split = 0\n",
     "best_leaf = 0\n",
-    "for leaf in range(1,11):\n",
-    "    for sample in range(2,11):\n",
-    "        for depth in range (1, 11):\n",
+    "for leaf in range(2, 12, 2):\n",
+    "    for sample in range(2, 12, 2):\n",
+    "        for depth in range (2, 12, 2):\n",
     "            model_tree = DecisionTreeClassifier(random_state=12345, max_depth=depth, min_samples_split=sample, min_samples_leaf=leaf)\n",
     "            model_tree.fit(features_train_upsampled_v2, target_train_upsampled_v2) \n",
     "            predictions_valid = model_tree.predict(features_valid_v2)\n",
@@ -4836,8 +4836,8 @@
     "best_est = 0\n",
     "best_depth = 0\n",
     "best_split = 0\n",
-    "for sample in range(2,11):\n",
-    "    for est in range(1, 50):\n",
+    "for sample in range(2,12, 2):\n",
+    "    for est in range(2, 34, 2):\n",
     "        for depth in range (1, 11):\n",
     "            model_forest = RandomForestClassifier(random_state=12345, n_estimators=est, max_depth=depth, min_samples_split=sample)\n",
     "            model_forest.fit(features_train_upsampled_v2, target_train_upsampled_v2) \n",
